# ComfyUI-Inspire-Pack

./: .gitignore  README.md  __init__.py  a1111_compat.py  backend_support.py  cache_settings.json  extra_model_paths.yaml.example  image_util.py  inspire_server.py  lora_block_weight.py  prompt_support.py  pyproject.toml  regional_nodes.py  requirements.txt  sampler_nodes.py  segs_support.py
inspire/: a1111_compat.py  backend_support.py  conditioning_nodes.py  image_util.py  inspire_server.py  list_nodes.py  lora_block_weight.py  model_nodes.py  prompt_support.py  regional_nodes.py  sampler_nodes.py  segs_support.py  util_nodes.py
inspire/libs/: common.py  utils.py
js/: common.js  image_util.js  image_util.js.js  inspire-backend.js  inspire-flex.js  inspire-loop.js  inspire-pack.js  lora_block_weight.js  progress-badge.js  prompt.js  regional.js  seed.js
libs/: utils.py
prompts/example/: prompt1.txt  prompt2.txt
resources/: lbw-preset.custom.txt.example  lbw-preset.txt  prompt-builder.yaml.example
