[project]
name = "comfyui-inspire-pack"
description = "This extension provides various nodes to support Lora Block Weight and the Impact Pack. Provides many easily applicable regional features and applications for Variation Seed."
version = "0.76"
license = "LICENSE"
dependencies = ["matplotlib", "cachetools"]

[project.urls]
Repository = "https://github.com/ltdrdata/ComfyUI-Inspire-Pack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "drltdata"
DisplayName = "ComfyUI Inspire Pack"
Icon = ""
